--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,26 +10,40 @@ html{
 }
 header{
     background-color: #348e91;
-    font-size: 2rem;
     display: flex;
+    font-size: 2rem;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     padding: auto;
     padding-top: 60px;
     text-align: center;
+    height: 90vh;
+    box-shadow: 0px 0px 20px 5px rgb(0 0 0 / 20%);
 }
 header picture img{
+    margin-top: 30%;
+    margin-bottom: 10%;
     border-radius: 100%;
-    height: 200px;
+    height: 250px;
     box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
 }
-.subtitulo-header{
-    color:#0a0c0d;
-    font-weight:normal;
-    font-size: 2.3rem;
+
+.titulo-header{
+    font-size: 5.5rem;
+    margin: 10px 0px;
 }
 
+.subtitulo-header{
+    color:#0a0c0d;
+    font-weight: 500;
+    font-size: 2.5rem;
+    margin: 10px 0px;
+}
+nav {
+    position: absolute;
+    top: 20px;
+}
 nav ul{
     list-style: none;
     display: flex;
@@ -59,7 +73,7 @@ li a:hover{
     background-color:transparent;
     color:#f2f2f2;
     border: #f2f2f2 solid 1px;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     border-radius: 5px;
     padding: 5px;
     margin: 20px 5px 0px 5px;
@@ -80,8 +94,8 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 300px;
+    width: 100vw;
+    height: 100vh;
     margin-top: 50px;
 }
 .card{
@@ -89,16 +103,16 @@ main{
     background-color: #fafafa;
     display: flex;
     flex-direction: column;
-    width: 90%;
-    height: 280px;
+    width: 90vw;
+    height: 70vh;
     padding: 0px 25px;
     box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
 }
-.card-titulo{
-    position: relative;
+.card-titulo, .titulo-experiencia{
+    font-size: 2.5rem;
     color:#348e91;
     text-align: center;
-    margin-top: 20px;
+    margin: 20px 0px;
 }
 .card-datos{
     margin:auto 0px;
@@ -131,14 +145,17 @@ main{
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
 }
 
 .container-card-experiencia{
+    margin: 20px 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 100vw;
+    height: 70vh;
 }
 
 .card-exp{
@@ -148,8 +165,9 @@ main{
     width: 300px;
     height: 400px;
     margin: 0 15px;
-    background-color: #213635;
-    border-radius: 2%;
+    background-color:#f2f2f2;
+    border-radius: 5%;
+    box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 30%);
 }
 .card-text{
     display: flex;
@@ -157,4 +175,25 @@ main{
     align-items: center;
     width: 80%;
     height: auto;
+}
+.img-card{
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+    box-shadow: 0px 0px 25px 0px rgb(0 0 0 / 10%);
+}
+.titulo-card{
+    color: #348e91;
+    font-size: 2.2rem;
+    margin: 10px 0px;
+}
+.parrafo-card{
+    color: #213635;
+    font-size: 1.7rem;
+    margin: 10px 0px;
+}
+
+.footer-card{
+    color:#213635;
+    font-size: 1.5rem;
+    margin: 10px 0px;
 }
