--- a/css/estilos.css
+++ b/css/estilos.css
@@ -197,3 +197,19 @@ main{
     font-size: 1.5rem;
     margin: 10px 0px;
 }
+
+
+/** Footer **/
+
+.container-footer{
+    background-color:#348e91;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 10vh;
+}
+.container-footer h4{
+    font-size: 1.8rem;
+    text-align: center;
+}
