--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,14 +15,12 @@ header{
     align-items: center;
     flex-direction: column;
     justify-content: start;
-    padding: auto;
-    padding-top: 60px;
     text-align: center;
     height: 90vh;
     box-shadow: 0px 0px 20px 5px rgb(0 0 0 / 20%);
 }
 header picture img{
-    margin-top: 30%;
+    margin-top: 60%;
     margin-bottom: 10%;
     border-radius: 100%;
     height: 250px;
@@ -89,7 +87,9 @@ main{
     align-items: center;
     justify-content: center;
 }
-.container-card{
+
+/** Containers de las sections **/
+.container{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -98,6 +98,23 @@ main{
     height: 100vh;
     margin-top: 50px;
 }
+.container-contacto{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 90vh;
+}
+.container-info{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:space-around;
+    width: 100vw;
+    height: 90vh;
+}
+
 .card{
     font-size: 1.6rem;
     background-color: #fafafa;
@@ -139,14 +156,65 @@ main{
     color: #213635;
     padding-top: 15px;
 }
-.container-experiencia{
+
+/** iconos **/
+
+div i{
+    color:#348e91;
+    font-size: 3.3rem;
+}
+
+/** estilos section Información **/
+
+.iconos-card{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.iconos{
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+}
+
+.card-iconos{
+    font-size: 1.6rem;
+    background-color: #fafafa;
+    display: flex;
+    flex-direction: column;
+    width: 90vw;
+    height: 50vh;
+    padding: 0px 25px;
+    box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
+}
+.iconos-img{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
 }
+.iconos-img h3{
+    color: #213635;
+    padding: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .container-card-experiencia{
     margin: 20px 0px;
