cambios, y por agregar eventos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,47 +7,69 @@
 }
 html{
     font-size: 62.5%;
-}
-header{
-    background-color: #348e91;
+    width: 100vw;
     display: flex;
-    font-size: 2rem;
-    align-items: center;
     flex-direction: column;
-    justify-content: start;
-    text-align: center;
-    height: 90vh;
+    align-items: center;
+    justify-content: center;
+}
+.main-header{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #348e91;
+    font-size: 1.5rem;
+    height: auto;
     box-shadow: 0px 0px 20px 5px rgb(0 0 0 / 20%);
 }
+
+.div1-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    height: auto;
+    margin: 5% 0;
+}
+.div2-header{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 50%;
+    height: auto;
+    margin: 5% 0;
+}
+
+.nav-header{
+    width: 100%;
+}
+
+
 header picture img{
-    margin-top: 60%;
-    margin-bottom: 10%;
     border-radius: 100%;
     height: 250px;
     box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
 }
 
 .titulo-header{
-    font-size: 5.5rem;
-    margin: 10px 0px;
+    font-size: 9rem;
+    margin: 0px 0px;
 }
 
 .subtitulo-header{
     color:#0a0c0d;
     font-weight: 500;
-    font-size: 2.5rem;
-    margin: 10px 0px;
+    font-size: 3rem;
+    margin: 5px 0px;
 }
-nav {
-    position: absolute;
-    top: 20px;
-}
+
 nav ul{
     list-style: none;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:space-between;
+    justify-content:center;
     margin: 20px auto;
 }
 nav ul li{
@@ -62,7 +84,7 @@ li a{
 }
 
 li a:hover{
-    background-color:#213635;
+    background-color:#11e0e07e;
     border-radius: 5px;
 
 }
@@ -112,7 +134,7 @@ main{
     align-items: center;
     justify-content:space-around;
     width: 100vw;
-    height: 90vh;
+    height: 60vh;
 }
 
 .card{
@@ -186,8 +208,8 @@ div i{
     background-color: #fafafa;
     display: flex;
     flex-direction: column;
-    width: 90vw;
-    height: 50vh;
+    width: 100vw;
+    height: 40vh;
     padding: 0px 25px;
     box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
 }
@@ -201,6 +223,32 @@ div i{
     color: #213635;
     padding: 20px;
 }
+
+/* ver css de iconos acá */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* .icono-img {
     transition: transform 0.2s ease-in-out;
