--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,9 +24,9 @@
 }
 /* Variables de Colores */
 
+
 html{
     font-size: 62.5%;
-    background-color: var(--color-2);
     width: 100%;
 }
 .container-body{
@@ -128,6 +128,12 @@ li a:hover{
 
 /* Fín CSS Header y sus componentes internos */
 
+main{
+    background-color: var(--color-2);
+    width: 100vw;
+    height: auto;
+}
+
 /* Inicio CSS Section Información */
 
 .container-info{
@@ -135,8 +141,11 @@ li a:hover{
     flex-direction: column;
     align-items: center;
     justify-content:center;
-    width: 100%;
-    height: 85vh;
+    margin: 0 auto;
+    width: 100vw;
+    max-width: 80%;
+    min-height: 75vh;
+    height: auto;
 }
 
 .informacion-titulo{
@@ -163,6 +172,7 @@ li a:hover{
 }
 .icon{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content:space-around;
 }
@@ -221,9 +231,14 @@ div i{
     align-items: center;
     justify-content: flex-end;
     width: 100vw;
+    max-width: 80%;
+    min-height: 75vh;
+    height: auto;
     margin-top: 50px;
     margin-bottom: 120px;
-    height: 80vh;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .experiencia-caja{
     width: 100%;
@@ -256,6 +271,7 @@ div i{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    min-height: 60vh;
 }
 
 .pictu-card{
@@ -295,8 +311,10 @@ div i{
     align-items: center;
     justify-content: center;
     width: 100vw;
-    margin: 80px 0;
-    height: 90vh;
+    max-width: 80%;
+    margin: 80px auto;
+    min-height: 75vh;
+    height: auto;
 }
 .habilidades-caja{
     position: relative;
@@ -356,8 +374,162 @@ div i{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
+    max-width: 80%;
+    margin: 0 auto;
+    height: auto;
+    min-height: 75vh;
 }
+
+.formulario{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: center;
+}
+
+.form-grupo{
+    align-items: center;
+    width: 100vw;
+    max-width: 60%;
+}
+.form-grupo-N{
+    width: 28%; 
+    margin: 0 2% 0 0;
+    cursor: pointer;
+}
+
+.form-grupo-A{
+    width: 28%; 
+    margin: 0 0 0 2%;
+    cursor: pointer;
+}
+
+
+.form-label{
+    display: block;
+    font-weight: 700;
+    font-size: 1.7rem;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.form-grupo-input{
+    position: relative;
+}
+
+.form-input{
+    width: 100%;
+    background-color: #fff;
+    border: 3px solid transparent;
+    border-radius: 3px;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 40px 0 10px;
+    transition: 0.3s ease all;
+}
+
+.form-input:focus{
+    border: 3px solid #0075ff;
+    outline: none;
+    box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
+}
+
+.form-input-error{
+    font-size: 1.2rem;
+    margin-bottom: 0;
+    display: none;
+}
+
+.form-input-error-activo{
+    display: block;
+}
+
+.form-validacion{
+    position: absolute;
+    right: 10px;
+    bottom: 15px;
+    font-size: 1.6rem;
+    z-index: 2;
+    opacity: 0;
+}
+
+.icon-aviso{
+    font-size: 1.6rem;
+    color: var(--color-1);
+    margin-right: 10px;
+}
+.form-checkbox{
+    margin-right: 10px;
+}
+
+.textarea-input{
+    max-width: 100%;
+    height: 200px;
+    max-height: 50vh;
+    text-align: start;
+    color: var(--color-2);
+    font-size: 1.6rem;
+}
+
+.form-aviso{
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 15px;
+    border-radius: 3px;
+    background-color: #f66060;
+    display: none;
+}
+
+.form-aviso-activo{
+    display: block;
+}
+
+.form-aviso p{
+    margin: 0;
+}
+
+.form-grupo-btn-enviar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-btn{
+    height: 45px;
+    line-height: 45px;
+    width: 30%;
+    background-color: var(--color-5);
+    color: var(--color-3);
+    font-weight: bold;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.1s ease all;
+}
+
+.form-btn:hover{
+    box-shadow: 3px 0px 30px rgba(163, 163, 163, 1);
+}
+
+.form-mensaje-exito{
+    font-size: 1.4rem;
+    color: #119200;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
 .contacto-caja{
     font-size: 1.6rem;
     display: flex;
@@ -365,7 +537,7 @@ div i{
     align-items: center;
     justify-content: end;
     width: 100%;
-    height: 85vh;
+    height: 100%;
 }
 .contacto-titulo{
     font-size: 2.5rem;
@@ -445,6 +617,25 @@ label input[type="checkbox"] {
 .inp-check{
     width: 20px;
 }
+*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Fín CSS Section Contacto */
 
@@ -455,8 +646,10 @@ label input[type="checkbox"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
     height: 5vh;
+    width: 100vw;
+    max-width: 100%;
+    margin: 0 auto;
 }
 .container-footer h4{
     font-size: 1.8rem;
