--- a/css/estilos.css
+++ b/css/estilos.css
@@ -489,12 +489,17 @@ div i{
 }
 
 .form-aviso{
-    width: 100%;
+    font-size: 1.7rem;
+    text-align: center;
+    width: 50%;
     height: 45px;
     line-height: 45px;
     padding: 0 15px;
     border-radius: 3px;
     background-color: #f66060;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
     display: none;
 }
 
@@ -530,24 +535,38 @@ div i{
 }
 
 .form-mensaje-exito{
-    font-size: 1.4rem;
-    color: #119200;
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin: 25px auto;
+    color: var(--color-4);
+    display: none;
+}
+
+.form-mensaje-exito-activo {
+	display: block;
 }
 
 
 
 
+/* ----- -----  Estilos para Validacion ----- ----- */
+.form-grupo-correcto .form-validacion {
+	color: #1ed12d;
+	opacity: 1;
+}
 
+.form-grupo-incorrecto .form-label {
+	color: #bb2929;
+}
 
+.form-grupo-incorrecto .form-validacion {
+	color: #bb2929;
+	opacity: 1;
+}
 
-
-
-
-
-
-
-
-
+.form-grupo-incorrecto .form-input {
+	border: 3px solid #bb2929;
+}
 
 /* Fín CSS Section Contacto */
 
